courses/non-cert-prep/cloudformation/udemy_cf_beg_to_int/3_parameters/section-3-activity-template/section-3-activity-template.yaml
# this is the template provided by the author for the exercise

AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Section 3 Activity template. 
  It launches a VPC with public and private subnets, 
  a web server EC2 instance in the public subnet 
  and a security group attached to this EC2 instance.

Parameters:
  EC2InstanceType:
    Description: EC2 instance type
    Type: String
    Default: db.t2.micro
    AllowedValues:
      - db.t2.nano
      - db.t2.micro
      - db.t2.small
  
  WebServerInstanceImageId:
    Description: Web server image id 
    Type: String 
    Default: ami-0ed9277fb7eb570c9 #for N. Virginia
  
  EbsSize:
    Type: Number
    Description: Database storage size in GB
    MinValue: 8
    MaxValue: 20
    Default: 8

  KeyPairName:
    Description: The key pair to use.
    Type: AWS::EC2::KeyPair::KeyName

  CidrBlocks:
    Type: CommaDelimitedList
    Description: 'CIDR blocks as a list:  <cidr-vpc>,<cidr-public-subnet>,<cidr-private-subnet>'
    Default: '10.0.0.0/16,10.0.0.0/24,10.0.1.0/24'

  # I'm not doing any error checking for overlapping subnets.
  AZPublic:
    Type: AWS::EC2::AvailabilityZone::Name
  AZPrivate:
    Type: AWS::EC2::AvailabilityZone::Name   


########################################################################################################################

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Description: Section 3 activity VPC
    Properties:
      CidrBlock: !Select [ 0, !Ref CidrBlocks]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        -
          Key: Name
          Value: !Sub "Section 3 Activity VPC for ${AWS::StackName}"

  # Subnets ---        
  PublicSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Ref AZPublic
      CidrBlock: !Select [ 1, !Ref CidrBlocks]
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Public Subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Ref AZPrivate
      CidrBlock: !Select [ 2, !Ref CidrBlocks]
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Private Subnet

  # Route tables ---
  PublicRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Public Route Table
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Private Route Table

  # Internet route for the public route table ---
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  InternetRoute:
    Type: AWS::EC2::Route 
    DependsOn:
      - VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0

  # Subnet - Route table associations ---    
  PublicSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PrivateSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  # Web server and security group ---
  WebServerInstance:
    Type: AWS::EC2::Instance 
    DependsOn:
      - InternetRoute
      - PublicSubnetRouteTableAssoc
    Properties:
      InstanceType: !Ref EC2InstanceType
      SubnetId: !Ref PublicSubnet 
      ImageId: !Ref WebServerInstanceImageId
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      BlockDeviceMappings:
        - 
          DeviceName: /dev/sdf
          Ebs:
            VolumeSize: !Ref EbsSize
            VolumeType: gp2
      Tags:
        -
          Key: Name
          Value: Web Server

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Activity security group 
      VpcId: !Ref Vpc
      SecurityGroupIngress:
              
        # HTTP rule
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80

        # SSH rule
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 22 
          ToPort: 22

########################################################################################################################
